# weaverdb

./: .gitignore  .hgignore  BUILD  CMakeLists.txt  LICENSE  README.md  abuild.sh  build.gradle  gradle.properties  log.txt  settings.gradle
dtrace/: Merge.java  (+23 more)
mtpgsql/: BTPageScanner.java  CMakeLists.txt  COPYRIGHT  Makefile.port  README
mtpgsql/doc/: FAQ_HPUX  FAQ_IRIX  FAQ_MSWIN  FAQ_QNX4  FAQ_SCO  FAQ_Solaris  Makefile
mtpgsql/doc/TODO.detail/: async  drop  inheritance  optimizer  performance  replication  tablespaces  typeconv  vacuum
mtpgsql/doc/src/: Makefile
mtpgsql/doc/src/sgml/: Makefile  admin.sgml  advanced.sgml  arch-dev.sgml  array.sgml  backup.sgml  biblio.sgml  bki.sgml  catalogs.sgml  charset.sgml  client-auth.sgml  cvs.sgml  datatype.sgml  datetime.sgml  developer.sgml  dfunc.sgml  docguide.sgml  ecpg.sgml  extend.sgml  filelist.sgml  func.sgml  geqo.sgml  history.sgml  indexcost.sgml  indices.sgml  info.sgml  inherit.sgml  installation.sgml  intro.sgml  jdbc.sgml  keywords.sgml  legal.sgml  libpgeasy.sgml  libpq++.sgml  libpq.sgml  lobj.sgml  maintenance.sgml  manage-ag.sgml  manage.sgml  monitoring.sgml  (+39 more)
mtpgsql/src/: CMakeLists.txt  GNUmakefile  Makefile.global  Makefile.port  Makefile.shlib  build_macosx  build_solaris8  build_solarisv9  build_solarisv9_gcc  config.buildtime  config.h  config.mflex
mtpgsql/src/backend/: CMakeLists.txt  Makefile  clang_mapfile.txt  empty.c  mapfile.txt  mtpg.d
mtpgsql/src/backend/access/: CMakeLists.txt  Makefile
mtpgsql/src/backend/bootstrap/: CMakeLists.txt  Makefile  boot.sed  bootparse.c  bootparse.y  bootscanner.c  bootscanner.l  bootstrap.c  bootstrap_tokens.h
mtpgsql/src/backend/catalog/: CMakeLists.txt  Makefile  README  aclchk.c  catalog.c  genbki.sh  genbki.sh.in  heap.c  index.c  indexing.c  pg_aggregate.c  pg_operator.c  pg_proc.c  pg_type.c
mtpgsql/src/backend/commands/: CMakeLists.txt  Makefile  async.c  cluster.c  command.c  comment.c  copy.c  creatinh.c  dbcommands.c  define.c  explain.c  indexcmds.c  proclang.c  remove.c  rename.c  sequence.c  trigger.c  user.c  vacuum.c  variable.c  view.c
mtpgsql/src/backend/env/: CMakeLists.txt  FieldTransfer.c  FieldTransform.c  Makefile  SaveWeaverConnection.c  WeaverConnection.c  analyze.c  bitmapset.c  connectionutil.c  dbwriter.c  delegatedscan.c  dolhelper.c  env.c  freespace.c  freespace.c.old  pg_crc.c  poolsweep.c  slotvar.c  test.c  test.txt  vacuumlazy.c
mtpgsql/src/backend/executor/: CMakeLists.txt  Makefile  execAmi.c  execFlatten.c  execJunk.c  execMain.c  execProcnode.c  execQual.c  execScan.c  execTuples.c  execUtils.c  functions.c  nodeAgg.c  nodeAppend.c  nodeDelegatedIndexscan.c  nodeDelegatedSeqscan.c  nodeGroup.c  nodeHash.c  nodeHashjoin.c  nodeIndexscan.c  nodeMaterial.c  nodeMergejoin.c  nodeNestloop.c  nodeResult.c  nodeSeqscan.c  nodeSort.c  nodeSubplan.c  nodeTidscan.c  nodeUnique.c  spi.c
mtpgsql/src/backend/lib/: CMakeLists.txt  Makefile  bit.c  dllist.c  dllistmutex.c  dllistold.c  fstack.c  hasht.c  lispsort.c  stringinfo.c
mtpgsql/src/backend/libpq/: CMakeLists.txt  Makefile  auth.c  be-dumpdata.c  be-fsstubs.c  be-pqexec.c  bufcomm.c  crypt.c  hba.c  password.c  portal.c  portalbuf.c  pqcomm.c  pqformat.c  pqpacket.c  pqsignal.c  util.c
mtpgsql/src/backend/main/: CMakeLists.txt  Makefile  main.c
mtpgsql/src/backend/nodes/: CMakeLists.txt  Makefile  README  copyfuncs.c  equalfuncs.c  freefuncs.c  list.c  makefuncs.c  nodeFuncs.c  nodes.c  outfuncs.c  print.c  read.c  readfuncs.c
mtpgsql/src/backend/optimizer/: CMakeLists.txt  Makefile
mtpgsql/src/backend/parser/: CMakeLists.txt  Makefile  addschema  analyze.c  gram.y  keywords.c  parse_agg.c  parse_clause.c  parse_coerce.c  parse_expr.c  parse_func.c  parse_node.c  parse_oper.c  parse_relation.c  parse_target.c  parse_type.c  parser.c  parserinfo.c  redef.c  redef.h  scan.l  scansup.c
mtpgsql/src/backend/port/: Makefile  Makefile.in  gethostname.c  getrusage.c  inet_aton.c  inet_aton.h  isinf.c  random.c  snprintf.c  srandom.c  strcasecmp.c  strerror.c  strtol.c  strtoul.c
mtpgsql/src/backend/postmaster/: CMakeLists.txt  Makefile  postmaster.c
mtpgsql/src/include/: FlexLexer.h  c.h  config.h  config.h.in  fmgr.h  miscadmin.h  os.h  postgres.h  postgres_ext.h  rusagestub.h  strdup.h  version.h  version.h.in
mtpgsql/src/interfaces/: Makefile
mtpgsql/src/makefiles/: Makefile.current  Makefile.macosx  Makefile.solaris_amd64  Makefile.solaris_sparc  Makefile.solarisv9  Makefile.solarisv9gcc
mtpgsql/src/mflex/: FlexLexer.h  Makefile  Makefile.in  ccl.c  conf.in  config.h  config.status  configure  dfa.c  ecs.c  flex.skl  flexdef.h  gen.c  libmain.c  libyywrap.c  main.c  misc.c  nfa.c  oldskel.c  parse.y  scan.c  scan.l  skel.c  sym.c  tblcmp.c  yylex.c
mtpgsql/src/port/: solaris.h  solaris_amd64.h
mtpgsql/src/scripts/: CMakeLists.txt  Makefile  comcheck  create_db  create_db.sh  init_db  init_db.sh  refresh_db  refresh_db.sh  reindex_db  reindex_db.sh  start_db  start_db.sh  stop_db  stop_db.sh  takesnapshot
mtpgsql/src/simpleserver/: Makefile  org_mtpgsql_server_SimpleServer.h  sstart
mtpgsql/src/utils/: CMakeLists.txt  Makefile  dllinit.c  getopt.c  strdup.c  version.c
pgjava_c/: BaseWeaverConnection.c  CMakeLists.txt  COPYRIGHT  Makefile  WeaverStmtManager.c  WeaverStmtManager.h  WeaverValueExtractor.c  WeaverValueExtractor.h  build.gradle  driver_weaver_BaseWeaverConnection.h  driver_weaver_BaseWeaverConnection_Statement.h  driver_weaver_BaseWeaverConnection_StreamingType.h  driver_weaver_WeaverInitializer.h  jni_bootstrap.c  lldb.tricks  loop.sh  mac_mapfile.txt  main.c  main.h  mapfile.txt  org_weaver_BaseWeaverConnection.h  org_weaver_BaseWeaverConnection_Statement.h  org_weaver_BaseWeaverConnection_StreamingType.h  org_weaver_WeaverInitializer.h  org_weaverdb_BaseWeaverConnection.h  org_weaverdb_WeaverCmdLine.h  org_weaverdb_WeaverInitializer.h
pgjava_c/driver/weaver/: BaseWeaverConnection.java  Bound.java  BoundInput.java  BoundOutput.java  ByteWellOutputStream.java  JavaConverter.java  WeaverInitializer.java  WeaverObjectLoader.java
(+1089 files in other folders)
